# blook

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  LLMDOCS.md  README.md  blook.cpp  blook.h  test.cpp  xmake.lua
.github/workflows/: build.yml
include/: Function.h  Hook.h  Memo.h  Module.h  Process.h  dirty_windows.h  misc.h  utils.h  xtd.h
include/blook/: Concepts.h  Disassembly.h  Function.h  Hook.h  Memo.h  Module.h  Process.h  allocator.h  blook.h  dirty_windows.h  disassembly.h  function.h  hook.h  memo.h  misc.h  module.h  pattern_parser.h  platform_types.h  process.h  protect.h  thread.h  utils.h  wintypes.h  xtd.h
include/blook/memory_scanner/: mb_kmp.h
resources/: icon.blend.7z
resources/icon.blend/: icon.blend  icon.blend1
src/: Disassembly.cpp  Function.cpp  Function.h  Hook.cpp  Memo.cpp  Module.cpp  Module.h  Process.cpp  Process.h  asm.asm  blook.cpp  blook.h  disassembly.cpp  function.cpp  hook.cpp  mb_kmp.cpp  memory.cpp  misc.cpp  test.cpp  utils.cpp
src/codegen/: DllHijackCodegen.cpp
src/platform/linux/: memory.cpp
src/platform/windows/: allocator.cpp  hwbplib.hpp  memory.cpp  misc.cpp  module.cpp  process.cpp  thread.cpp
src/tests/: test.cpp  test_allocator.cpp  test_asm.asm  test_linux.cpp  test_windows.cpp
